--- a/vue/原理.md
+++ b/vue/原理.md
@@ -1,3 +1,14 @@
+- [MVVM  -- 数据驱动视图](#mvvm-----------)
+- [new vue(模板和数据如何渲染成最终的 DOM )](#new-vue---------------dom--)
+- [Vue的响应式](#vue----)
+  * [深度监听](#----)
+- [虚拟DOM](#--dom)
+  * [VDOM DIFF 算法](#vdom-diff---)
+    + [树diff的时间复杂度O（n^3）](#-diff------o-n-3-)
+    + [优化时间复杂度O（n）](#-------o-n-)
+      - [tag不同，则直接删除重建，不在深度比较](#tag-----------------)
+      - [tag 和 key 相同，则认为是相同的节点，不再深度比较](#tag---key--------------------)
+      
 # MVVM  -- 数据驱动视图
 ![image](../img/mvvm.jpg)
 
