--- a/vue/基础总结.md
+++ b/vue/基础总结.md
@@ -1,6 +1,37 @@
-#<v-html>
+- [v-html](#v-html)
+- [computed](#computed)
+- [watch](#watch)
+- [v-if vs v-show](#v-if-vs-v-show)
+- [v-for](#v-for)
+- [event](#event)
+- [事件修饰符](#-----)
+- [按键修饰符](#-----)
+- [表单](#--)
+- [父子组件的通讯](#-------)
+  * [props 和 $emit](#props----emit)
+  * [自定义事件（兄弟组件）](#-----------)
+  * [vuex](#vuex)
+- [生命周期（单个组件）](#----------)
+- [生命周期（父子组件）](#----------)
+  * [create：是外到内， 渲染是从内到外 （同步引入）](#create---------------------)
+  * [create：是外到内， 渲染是从内到外 （异步步引入）](#create----------------------)
+  * [更新](#--)
+  * [销毁：是外到内， 渲染是从内到外](#----------------)
+- [vue高级特性](#vue----)
+  * [自定义v-model](#---v-model)
+  * [$nextTick](#-nexttick)
+  * [slot](#slot)
+  * [动态组件](#----)
+  * [异步组件](#----)
+  * [keep-alive](#keep-alive)
+  * [mixin](#mixin)
+- [vuex](#vuex-1)
+- [vue-router](#vue-router)
+
+# v-html
 使用v-html有xss 风险
-#computed
+
+# computed
 computed 有缓存，data不变,是不会重新计算
 ```vue
 data() {
@@ -15,7 +46,7 @@ computed: {
   }
 }
 ```
-#watch
+# watch
 ```vue
 watch:{
   info: {
@@ -31,10 +62,10 @@ watch:{
 ```
 * 只是浅监听，如果要深度监听需要加 deep:true
 * 监听引用类型，拿不到oldVar
-#v-if vs v-show
+# v-if vs v-show
 组件一次性加载时使用v-if， 不然不断的销毁和展示。
 v-show: 就是加了个display:none
-#v-for
+# v-for
 key 不能乱写（比如key 和random），key需要和业务相关的id
 v-for 和 v-if 不能一起使用。
 ```vue
@@ -42,7 +73,7 @@ v-for 和 v-if 不能一起使用。
 ```
 v-for 优先级大于v-if
 事件：
-#event
+# event
 ```vue
 <button @click="fun(2, $event)">button</buttton>
 
