*add the webpack and babel tutorial

--- a/vue/原理.md
+++ b/vue/原理.md
@@ -1,13 +1,13 @@
 - [MVVM  -- 数据驱动视图](#MVVM--数据驱动视图)
-- [new vue(模板和数据如何渲染成最终的 DOM )](#new-vue---------------dom--)
-- [Vue的响应式](#vue----)
-  * [深度监听](#----)
-- [虚拟DOM](#--dom)
-  * [VDOM DIFF 算法](#vdom-diff---)
-    + [树diff的时间复杂度O（n^3）](#-diff------o-n-3-)
-    + [优化时间复杂度O（n）](#-------o-n-)
-      - [tag不同，则直接删除重建，不在深度比较](#tag-----------------)
-      - [tag 和 key 相同，则认为是相同的节点，不再深度比较](#tag---key--------------------)
+- [new vue(模板和数据如何渲染成最终的 DOM )](#new vue(模板和数据如何渲染成最终的-DOM-))
+- [Vue的响应式](#Vue的响应式)
+  * [深度监听](#深度监听)
+- [虚拟DOM](#虚拟DOM)
+  * [VDOM DIFF 算法](#VDOM-DIFF-算法)
+    + [树diff的时间复杂度O（n^3）](#树diff的时间复杂度O-n^3-)
+    + [优化时间复杂度O（n）](#优化时间复杂度O-（n）-)
+      - [tag不同，则直接删除重建，不在深度比较](#tag不同，则直接删除重建，不在深度比较)
+      - [tag和key相同，则认为是相同的节点，不再深度比较](#tag和key相同，则认为是相同的节点，不再深度比较)
       
 # MVVM  -- 数据驱动视图
 ![image](../img/mvvm.jpg)
@@ -72,7 +72,7 @@
 ![image](../img/diff1.png)
 #### tag不同，则直接删除重建，不在深度比较
 ![image](../img/diff2.png)
-#### tag 和 key 相同，则认为是相同的节点，不再深度比较
+#### tag和key相同，则认为是相同的节点，不再深度比较
 
 ###总结
 ![image](../img/diff.png)
