--- a/vue/基础总结.md
+++ b/vue/基础总结.md
@@ -4,25 +4,25 @@
 - [v-if vs v-show](#v-if-vs-v-show)
 - [v-for](#v-for)
 - [event](#event)
-- [事件修饰符](#-----)
-- [按键修饰符](#-----)
-- [表单](#--)
-- [父子组件的通讯](#-------)
-  * [props 和 $emit](#props----emit)
-  * [自定义事件（兄弟组件）](#-----------)
+- [事件修饰符](#事件修饰符)
+- [按键修饰符](#按键修饰符)
+- [表单](#表单)
+- [父子组件的通讯](#父子组件的通讯)
+  * [props 和 $emit](#props-和--emit)
+  * [自定义事件（兄弟组件）](#自定义事件（兄弟组件）)
   * [vuex](#vuex)
-- [生命周期（单个组件）](#----------)
-- [生命周期（父子组件）](#----------)
-  * [create：是外到内， 渲染是从内到外 （同步引入）](#create---------------------)
-  * [create：是外到内， 渲染是从内到外 （异步步引入）](#create----------------------)
-  * [更新](#--)
-  * [销毁：是外到内， 渲染是从内到外](#----------------)
-- [vue高级特性](#vue----)
-  * [自定义v-model](#---v-model)
+- [生命周期（单个组件）](#生命周期（单个组件）)
+- [生命周期（父子组件）](#生命周期（父子组件）)
+  * [create：是外到内， 渲染是从内到外 （同步引入）](#create：是外到内，-渲染是从内到外-（同步引入）)
+  * [create：是外到内， 渲染是从内到外 （异步步引入）](#create：是外到内，-渲染是从内到外-（异步步引入）)
+  * [更新](#更新)
+  * [销毁：是外到内， 渲染是从内到外](#销毁：是外到内，-渲染是从内到外)
+- [vue高级特性](#vue高级特性)
+  * [自定义v-model](#自定义v-model)
   * [$nextTick](#-nexttick)
   * [slot](#slot)
-  * [动态组件](#----)
-  * [异步组件](#----)
+  * [动态组件](#动态组件)
+  * [异步组件](#异步组件)
   * [keep-alive](#keep-alive)
   * [mixin](#mixin)
 - [vuex](#vuex-1)
