--- a/vue/原理.md
+++ b/vue/原理.md
@@ -1,5 +1,5 @@
 - [MVVM  -- 数据驱动视图](#MVVM--数据驱动视图)
-- [new vue(模板和数据如何渲染成最终的 DOM )](#new vue(模板和数据如何渲染成最终的-DOM-))
+- [new vue-模板和数据如何渲染成最终的 DOM ](#new-vue-模板和数据如何渲染成最终的-DOM)
 - [Vue的响应式](#Vue的响应式)
   * [深度监听](#深度监听)
 - [虚拟DOM](#虚拟DOM)
@@ -12,7 +12,7 @@
 # MVVM  -- 数据驱动视图
 ![image](../img/mvvm.jpg)
 
-# new vue(模板和数据如何渲染成最终的 DOM )
+# new vue-模板和数据如何渲染成最终的 DOM
 ![image](../img/new-vue.png)
 
 # Vue的响应式
