--- a/vue/原理.md
+++ b/vue/原理.md
@@ -4,10 +4,10 @@
   * [深度监听](#深度监听)
 - [虚拟DOM](#虚拟DOM)
   * [VDOM DIFF 算法](#VDOM-DIFF-算法)
-    + [树diff的时间复杂度O（n^3）](#树diff的时间复杂度O-n^3-)
-    + [优化时间复杂度O（n）](#优化时间复杂度O-（n）-)
-      - [tag不同，则直接删除重建，不在深度比较](#tag不同，则直接删除重建，不在深度比较)
-      - [tag和key相同，则认为是相同的节点，不再深度比较](#tag和key相同，则认为是相同的节点，不再深度比较)
+    + [树diff的时间复杂度O(n^3)](#树diff的时间复杂度O(n^3))
+    + [优化时间复杂度O(n)）](#优化时间复杂度O(n))
+      - [tag不同 则直接删除重建 不在深度比较](#tag不同-则直接删除重建-不在深度比较)
+      - [tag和key相同 则认为是相同的节点 不再深度比较](#tag和key相同-则认为是相同的节点-不再深度比较)
       
 # MVVM  -- 数据驱动视图
 ![image](../img/mvvm.jpg)
@@ -65,14 +65,14 @@
 }
 ```
 ## VDOM DIFF 算法
-### 树diff的时间复杂度O（n^3）
+### 树diff的时间复杂度O(n^3)
 1.遍历树1 2.遍历树2  3.排序 （1000个节点要计算1一亿次， 算法不可用）
-### 优化时间复杂度O（n）
+### 优化时间复杂度O(n)
 ####只比较同一层级，不跨级比较
 ![image](../img/diff1.png)
-#### tag不同，则直接删除重建，不在深度比较
+#### tag不同 则直接删除重建 不在深度比较
 ![image](../img/diff2.png)
-#### tag和key相同，则认为是相同的节点，不再深度比较
+#### tag和key相同 则认为是相同的节点 不再深度比较
 
 ###总结
 ![image](../img/diff.png)
