--- a/vue/基础总结.md
+++ b/vue/基础总结.md
@@ -8,15 +8,15 @@
 - [按键修饰符](#按键修饰符)
 - [表单](#表单)
 - [父子组件的通讯](#父子组件的通讯)
-  * [props 和 $emit](#props-和--emit)
-  * [自定义事件（兄弟组件）](#自定义事件（兄弟组件）)
+  * [props 和 $emit](#props-和-emit)
+  * [自定义事件(兄弟组件)](#自定义事件(兄弟组件))
   * [vuex](#vuex)
-- [生命周期（单个组件）](#生命周期（单个组件）)
-- [生命周期（父子组件）](#生命周期（父子组件）)
-  * [create：是外到内， 渲染是从内到外 （同步引入）](#create：是外到内，-渲染是从内到外-（同步引入）)
-  * [create：是外到内， 渲染是从内到外 （异步步引入）](#create：是外到内，-渲染是从内到外-（异步步引入）)
+- [生命周期(单个组件)](#生命周期(单个组件))
+- [生命周期(父子组件)](#生命周期(父子组件))
+  * [create:是外到内,渲染是从内到外 (同步引入)](#create:是外到内,渲染是从内到外-(同步引入))
+  * [create:是外到内,渲染是从内到外 (异步步引入)](#create:是外到内,渲染是从内到外-(异步步引入))
   * [更新](#更新)
-  * [销毁：是外到内， 渲染是从内到外](#销毁：是外到内，-渲染是从内到外)
+  * [销毁:是外到内,渲染是从内到外](#销毁:是外到内,渲染是从内到外)
 - [vue高级特性](#vue高级特性)
   * [自定义v-model](#自定义v-model)
   * [$nextTick](#-nexttick)
@@ -32,7 +32,7 @@
 使用v-html有xss 风险
 
 # computed
-computed 有缓存，data不变,是不会重新计算
+computed 有缓存,data不变,是不会重新计算
 ```vue
 data() {
   return {
@@ -51,7 +51,7 @@ computed: {
 watch:{
   info: {
     handler(newVal, oldVal) {
-      console.log(oldVal, newVal) //引用类型，拿不到oldVal
+      console.log(oldVal, newVal) //引用类型,拿不到oldVal
     },
     deep: true //深度监听
   },
@@ -60,19 +60,19 @@ watch:{
   }
 }
 ```
-* 只是浅监听，如果要深度监听需要加 deep:true
-* 监听引用类型，拿不到oldVar
+* 只是浅监听,如果要深度监听需要加 deep:true
+* 监听引用类型,拿不到oldVar
 # v-if vs v-show
-组件一次性加载时使用v-if， 不然不断的销毁和展示。
+组件一次性加载时使用v-if, 不然不断的销毁和展示。
 v-show: 就是加了个display:none
 # v-for
-key 不能乱写（比如key 和random），key需要和业务相关的id
+key 不能乱写(比如key 和random),key需要和业务相关的id
 v-for 和 v-if 不能一起使用。
 ```vue
 <div v-if="aa" v-for="bb"></div>
 ```
 v-for 优先级大于v-if
-事件：
+事件:
 # event
 ```vue
 <button @click="fun(2, $event)">button</buttton>
@@ -84,7 +84,7 @@ fun(num, event) {
 }
 ```
 * event是原生的event对象
-* vue的元素放在哪里，事件就会被挂载到哪里。
+* vue的元素放在哪里,事件就会被挂载到哪里。
 
 # 事件修饰符
 ```vue
@@ -95,9 +95,9 @@ fun(num, event) {
 //修饰符可以串联
 <a v-on:click.stop.prevent="doThis"></a>
 //添加事件监听器时使用事件捕获模式
-//即内部元素触发的事件先在此处理，然后在交给内部元素来处理
+//即内部元素触发的事件先在此处理,然后在交给内部元素来处理
 <div v-on:click.capture="doThis"></div>
-//只当在event.target 是当前元素自身时触发处理函数， 即事件不是内部触发
+//只当在event.target 是当前元素自身时触发处理函数, 即事件不是内部触发
 <div v-on:click.self="doThis"></div>
 
 ```
@@ -121,7 +121,7 @@ fun(num, event) {
 ```
 # 父子组件的通讯
 ## props 和 $emit
-## 自定义事件（兄弟组件）
+## 自定义事件(兄弟组件)
 ```vue
 const event = new Vue()
 //component 1
@@ -138,24 +138,24 @@ mounted() {
 }
 
 beforeDestory() {
-  // 及时销毁， 不然可能引起内存泄露
+  // 及时销毁, 不然可能引起内存泄露
   event.$off('onAdd', this.fun)
 }
 ```
 ## vuex
 
-# 生命周期（单个组件）
+# 生命周期(单个组件)
 * beforeCreate
-* create: 页面还没渲染，vue的实例已经初始化完了
+* create: 页面还没渲染,vue的实例已经初始化完了
 * beforeMount
-* mount：页面已经渲染
+* mount:页面已经渲染
 * beforeUpdate
 * update
 * beforeDestory
 * destory
 
-# 生命周期（父子组件）
-## create：是外到内， 渲染是从内到外 （同步引入）
+# 生命周期(父子组件)
+## create:是外到内,渲染是从内到外 (同步引入)
 * 父beforeCreate
 * 父created
 * 父beforeMount
@@ -164,14 +164,14 @@ beforeDestory() {
 * 子beforeMount
 * 子mounted
 * 父mounted
-## create：是外到内， 渲染是从内到外 （异步步引入）
+## create:是外到内,渲染是从内到外 (异步步引入)
 父组件的beforeCreate、created、beforeMount、mounted --> 子组件的beforeCreate、created、beforeMount、mounted
 ## 更新
 * 父beforeUpdate
 * 子beforeUpdate
 * 子update
 * 父update
-## 销毁：是外到内， 渲染是从内到外
+## 销毁:是外到内,渲染是从内到外
 * 父 beforeDestory
 * 子beforeDestory
 * 子destory
@@ -208,8 +208,8 @@ export default {
 ```
 ## $nextTick
 Vue 是异步渲染的
-data 改变之后，DOM不会立刻渲染
-$nextTick 会在DOM 渲染之后触发， 以获取最新的DOM节点
+data 改变之后,DOM不会立刻渲染
+$nextTick 会在DOM 渲染之后触发, 以获取最新的DOM节点
 ## slot
 ```vue
 <abc>
@@ -231,7 +231,7 @@ $nextTick 会在DOM 渲染之后触发， 以获取最新的DOM节点
 * 动态的加载组件
 ## 异步组件
 * import() 函数
-* 按需加载，首屏优化
+* 按需加载,首屏优化
 ```vue
 components : {
   textComponent: () => import('../../textComponent.vue')
@@ -240,15 +240,15 @@ components : {
 ## keep-alive
 * 缓存组件
 * 频繁切换组件
-* vue的优化，有内存泄露风险
+* vue的优化,有内存泄露风险
 ```vue
 <keep-alive>
     xxx
 </keep-alive>
 ```
 ## mixin
-* 多组件有相同逻辑，抽离出来
-* mixin并不是完美的解决方案，会有一些问题 （1 变量来源不明确，不易阅读，2 多mixin可能会有命名冲突 3 mixin和组件可能出现多对多关系，复杂度较高）
+* 多组件有相同逻辑,抽离出来
+* mixin并不是完美的解决方案,会有一些问题 (1 变量来源不明确,不易阅读,2 多mixin可能会有命名冲突 3 mixin和组件可能出现多对多关系,复杂度较高)
 * Vue3 的Composition API 就是为了解决这些问题
 
 # vuex
@@ -257,7 +257,7 @@ components : {
 * actions  -> 异步
 * mutations -> 同步
 # vue-router
-* 路由模式： hash， H5 history
-* 路由配置： 动态路由('/user/:id')，懒加载(component: ()=>import('xx')
+* 路由模式: hash, H5 history
+* 路由配置: 动态路由('/user/:id'),懒加载(component: ()=>import('xx')
 
 
