*fix the anchor

--- a/vue/基础总结.md
+++ b/vue/基础总结.md
@@ -9,12 +9,12 @@
 - [表单](#表单)
 - [父子组件的通讯](#父子组件的通讯)
   * [props 和 $emit](#props-和-emit)
-  * [自定义事件(兄弟组件)](#自定义事件(兄弟组件))
+  * [自定义事件-兄弟组件](#自定义事件-兄弟组件)
   * [vuex](#vuex)
-- [生命周期(单个组件)](#生命周期(单个组件))
-- [生命周期(父子组件)](#生命周期(父子组件))
-  * [create:是外到内,渲染是从内到外 (同步引入)](#create:是外到内,渲染是从内到外-(同步引入))
-  * [create:是外到内,渲染是从内到外 (异步步引入)](#create:是外到内,渲染是从内到外-(异步步引入))
+- [生命周期-单个组件](#生命周期-单个组件)
+- [生命周期-父子组件](#生命周期-父子组件)
+  * [create:是外到内,渲染是从内到外-同步引入](#create:是外到内,渲染是从内到外-同步引入)
+  * [create:是外到内,渲染是从内到外-异步引入](#create:是外到内,渲染是从内到外-异步引入)
   * [更新](#更新)
   * [销毁:是外到内,渲染是从内到外](#销毁:是外到内,渲染是从内到外)
 - [vue高级特性](#vue高级特性)
@@ -121,7 +121,7 @@ fun(num, event) {
 ```
 # 父子组件的通讯
 ## props 和 $emit
-## 自定义事件(兄弟组件)
+## 自定义事件-兄弟组件
 ```vue
 const event = new Vue()
 //component 1
@@ -144,7 +144,7 @@ beforeDestory() {
 ```
 ## vuex
 
-# 生命周期(单个组件)
+# 生命周期-单个组件
 * beforeCreate
 * create: 页面还没渲染,vue的实例已经初始化完了
 * beforeMount
@@ -154,8 +154,8 @@ beforeDestory() {
 * beforeDestory
 * destory
 
-# 生命周期(父子组件)
-## create:是外到内,渲染是从内到外 (同步引入)
+# 生命周期-父子组件
+## create:是外到内,渲染是从内到外-同步引入
 * 父beforeCreate
 * 父created
 * 父beforeMount
@@ -164,7 +164,7 @@ beforeDestory() {
 * 子beforeMount
 * 子mounted
 * 父mounted
-## create:是外到内,渲染是从内到外 (异步步引入)
+## create:是外到内,渲染是从内到外-异步引入
 父组件的beforeCreate、created、beforeMount、mounted --> 子组件的beforeCreate、created、beforeMount、mounted
 ## 更新
 * 父beforeUpdate
