--- a/vue/基础总结.md
+++ b/vue/基础总结.md
@@ -13,10 +13,10 @@
   * [vuex](#vuex)
 - [生命周期-单个组件](#生命周期-单个组件)
 - [生命周期-父子组件](#生命周期-父子组件)
-  * [create:是外到内,渲染是从内到外-同步引入](#create:是外到内,渲染是从内到外-同步引入)
-  * [create:是外到内,渲染是从内到外-异步引入](#create:是外到内,渲染是从内到外-异步引入)
+  * [create-同步引入](#create-同步引入)
+  * [create-异步引入](#create-异步引入)
   * [更新](#更新)
-  * [销毁:是外到内,渲染是从内到外](#销毁:是外到内,渲染是从内到外)
+  * [销毁](#销毁)
 - [vue高级特性](#vue高级特性)
   * [自定义v-model](#自定义v-model)
   * [$nextTick](#-nexttick)
@@ -155,7 +155,9 @@ beforeDestory() {
 * destory
 
 # 生命周期-父子组件
-## create:是外到内,渲染是从内到外-同步引入
+## create-同步引入
+create-同步引入
+create:是外到内,渲染是从内到外-同步引入
 * 父beforeCreate
 * 父created
 * 父beforeMount
@@ -164,14 +166,16 @@ beforeDestory() {
 * 子beforeMount
 * 子mounted
 * 父mounted
-## create:是外到内,渲染是从内到外-异步引入
+## create-异步引入
+create:是外到内,渲染是从内到外-异步引入
 父组件的beforeCreate、created、beforeMount、mounted --> 子组件的beforeCreate、created、beforeMount、mounted
 ## 更新
 * 父beforeUpdate
 * 子beforeUpdate
 * 子update
 * 父update
-## 销毁:是外到内,渲染是从内到外
+## 销毁
+销毁:是外到内,渲染是从内到外
 * 父 beforeDestory
 * 子beforeDestory
 * 子destory
@@ -185,11 +189,11 @@ beforeDestory() {
 
 //component  customerModel
 <template>
-   <! --
-    1  input使用了:value 而不是 v-model
-    2 change1  和 model.event 要对应
-    3 text1 属性要对应起来
-   -->
+   /**
+    ** 1  input使用了:value 而不是 v-model
+    ** 2 change1  和 model.event 要对应
+    ** 3 text1 属性要对应起来
+   */
   <input> type="text" :value="text1" @input="@emit('change1', $event.target.value)"></input>
 </template>
 
