*add new tutorial

--- a/vue/基础总结.md
+++ b/vue/基础总结.md
@@ -9,6 +9,9 @@
 - [表单](#表单)
 - [父子组件的通讯](#父子组件的通讯)
   * [props 和 $emit](#props-和-emit)
+  * [slot](#slot)
+  * [$parent-$children](#$parent-$children)
+  * [provide-inject](#provide-inject)
   * [自定义事件-兄弟组件](#自定义事件-兄弟组件)
   * [vuex](#vuex)
 - [生命周期-单个组件](#生命周期-单个组件)
@@ -121,6 +124,9 @@ fun(num, event) {
 ```
 # 父子组件的通讯
 ## props 和 $emit
+## slot
+## $parent-$children
+## provide-inject
 ## 自定义事件-兄弟组件
 ```vue
 const event = new Vue()
@@ -265,3 +271,172 @@ components : {
 * 路由配置: 动态路由('/user/:id'),懒加载(component: ()=>import('xx')
 
 
+# 渲染
+## 初次渲染
+* 把模板解析为render function(在开发环境使用vue-loader)
+* 触发响应式，监听data， 加入getter， setter
+* 执行render函数，生成vnode,patch(elem, vnode)
+
+## 更新
+* 修改data，触发setter（在getter中已被监听）
+* 重新执行render，生产新的newVnode
+* patch(vnode, newVnode)
+* 使用$nextTick 进行异步渲染: 在DOM更新完成后，触发回调
+
+# 为何在v-for中使用key
+* diff算法中通过key 和 tag 判断是不是sameNode
+* 能够减少渲染次数，增加性能
+
+# v-model的实现原理
+* input 元素:value=this.name
+* 绑定input事件 this.name = $event.target.value
+* data修改触发 re-render
+
+# computed
+* 缓存，data不变不会重新计算
+* 提高性能
+
+# ajax应该放在哪个生命周期
+* mounted
+* js是单线程的， ajax是异步获取数据
+* 在mounted前会造成逻辑混乱
+
+# 什么时候用beforeDestory
+* 解除自定义事件 even.$off
+* 清除定时器
+* 解除自定义的DOM事件， 如window.scroll
+
+# vue常见优化
+* v-for 加key，避免和v-if 一起用
+* 合理用computed
+* 合理用v-show.v-if
+* data层级不要太深
+* 使用vue-loader 在开发环境做预编译
+* webpack 优化相关
+* 合理用keep-alive
+* 其他前端优化方式，如image lazy load
+* 使用ssr
+
+# Objec.defineProperty的缺点
+* 深度监听需要一次性递归
+* 无法监听新增、删除属性，需要用Vue.set,Vue.delete
+* 无法监听数组
+
+# vue单向数据流
+* 所有的prop的数据都是从父到子传递
+* 单向数据流，易于监测数据的流动，出现了错误可以更加迅速的定位到错误发生的位置。
+* 如果修改了，Vue 是如何监控到属性的修改并给出警告的。
+```js
+// src/core/instance/state.js
+function initProps (vm: Component, propsOptions: Object) {
+  const propsData = vm.$options.propsData || {}
+  const props = vm._props = {}
+  // cache prop keys so that future props updates can iterate using Array
+  // instead of dynamic object key enumeration.
+  const keys = vm.$options._propKeys = []
+  const isRoot = !vm.$parent
+  // root instance props should be converted
+  if (!isRoot) {
+    toggleObserving(false)
+  }
+  for (const key in propsOptions) {
+    keys.push(key)
+    const value = validateProp(key, propsOptions, propsData, vm)
+    /* istanbul ignore else */
+    if (process.env.NODE_ENV !== 'production') {
+      const hyphenatedKey = hyphenate(key)
+      if (isReservedAttribute(hyphenatedKey) ||
+          config.isReservedAttr(hyphenatedKey)) {
+        warn(
+          `"${hyphenatedKey}" is a reserved attribute and cannot be used as component prop.`,
+          vm
+        )
+      }
+      defineReactive(props, key, value, () => {
+        if (!isRoot && !isUpdatingChildComponent) {
+          warn(
+            `Avoid mutating a prop directly since the value will be ` +
+            `overwritten whenever the parent component re-renders. ` +
+            `Instead, use a data or computed property based on the prop's ` +
+            `value. Prop being mutated: "${key}"`,
+            vm
+          )
+        }
+      })
+    } else {
+      defineReactive(props, key, value)
+    }
+    // static props are already proxied on the component's prototype
+    // during Vue.extend(). We only need to proxy props defined at
+    // instantiation here.
+    if (!(key in vm)) {
+      proxy(vm, `_props`, key)
+    }
+  }
+  toggleObserving(true)
+}
+// src/core/observer/index.js
+/**
+ * Define a reactive property on an Object.
+ */
+export function defineReactive (
+  obj: Object,
+  key: string,
+  val: any,
+  customSetter?: ?Function,
+  shallow?: boolean
+) {
+  const dep = new Dep()
+
+  const property = Object.getOwnPropertyDescriptor(obj, key)
+  if (property && property.configurable === false) {
+    return
+  }
+
+  // cater for pre-defined getter/setters
+  const getter = property && property.get
+  const setter = property && property.set
+  if ((!getter || setter) && arguments.length === 2) {
+    val = obj[key]
+  }
+
+  let childOb = !shallow && observe(val)
+  Object.defineProperty(obj, key, {
+    enumerable: true,
+    configurable: true,
+    get: function reactiveGetter () {
+      const value = getter ? getter.call(obj) : val
+      if (Dep.target) {
+        dep.depend()
+        if (childOb) {
+          childOb.dep.depend()
+          if (Array.isArray(value)) {
+            dependArray(value)
+          }
+        }
+      }
+      return value
+    },
+    set: function reactiveSetter (newVal) {
+      const value = getter ? getter.call(obj) : val
+      /* eslint-disable no-self-compare */
+      if (newVal === value || (newVal !== newVal && value !== value)) {
+        return
+      }
+      /* eslint-enable no-self-compare */
+      if (process.env.NODE_ENV !== 'production' && customSetter) {
+        customSetter()
+      }
+      // #7981: for accessor properties without setter
+      if (getter && !setter) return
+      if (setter) {
+        setter.call(obj, newVal)
+      } else {
+        val = newVal
+      }
+      childOb = !shallow && observe(newVal)
+      dep.notify()
+    }
+  })
+}
+```
