--- a/机器/分布式.md
+++ b/机器/分布式.md
@@ -1,12 +1,28 @@
+- [CAP](#cap)
+  * [一致性](#一致性)
+  * [问题](#问题)
+- [主从同步](#主从同步)
+  * [问题](#问题1)
+- [多数派](#多数派)
+  * [问题](#问题)
+- [PAXOS](#paxos)
+  * [Basic Paxos](#basic-paxos)
+    + [角色:](#角色)
+    + [步骤-phases](#步骤-phases)
+  * [Multi Paxos](#multi-paxos)
+- [Raft](#raft)
+- [ZAB](#zab)
+- [应用](#应用)
+
 # CAP
 CAP原则又称CAP定理，指的是在一个分布式系统中，一致性（Consistency）、可用性（Availability）、分区容错性（Partition tolerance。这三个要素最多只能同时实现两点，不可能三者兼顾。
 ![image](./images/cap.jpeg)
 
-# 一致性
+## 一致性
 1. 弱一致性（最终一致性）: DNS， Gossip
 2. 强一致性: 同步，Paxos，Raft（muti-paxos）,ZAB（muti-paxos）
 
-# 问题
+## 问题
 数据不能存在单点。
 分布式系统对fault tolorence的一般解决方案是state machine replication(状态机复制)。
 而Paxos就是状态机复制的一种共识算法(consensus)。
